[workspace]
resolver = "2"
members = [
    "tcp_server",
    "tcp_client",
    "multi_list",
    "sdl_events",
    "bin_tree",
	"primes",
	"generator",
	"scan",
	"lambda",
	"regex",
    "future",
    "codec",
    "sem_ver",
    "asm",
    # "web-form",
    # "poly",
    # "fp",
    "nvptx",
    "db",
    "executor",
    # "bare",
    # "json",
    # "complex",
    # "fib_heap",
    # "wasi-rest-client",
    # "wasm-run",
]
