[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = { version = "0.21.0", default-features = false, features = ["zlib", "multi-threaded-cf"] }

bincode = "1.3.3"
serde = { version = "1.0.163", features = ["derive"] }
sha3 = "0.10.8"

anyhow = "1.0.71"
log = "0.4.18"
env_logger = "0.10.0"

versioned = { path = "./versioned" }
